--- a/src/cps/homepage/homepage.scss
+++ b/src/cps/homepage/homepage.scss
@@ -1,8 +1,8 @@
 .cp-homepage-container {
 	.log {
 		color:white;
-		width: 50px;
-		height: 50px;
 		padding: 15px 15px;
+		float: left;
+		font-size: 35px;
 	}
 }
