--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
-.app-container {
-	.log {
-		color:white;
-		padding: 15px 15px;
-		float: left;
-		font-size: 35px;
-	}
+body {
+	margin: 0 0;
+	.app-container {
+    .log {
+        color: white;
+        padding: 15px 15px;
+        float: left;
+        font-size: 35px;
+    }
+}
 }
