--- a/src/cps/menu/menu.scss
+++ b/src/cps/menu/menu.scss
@@ -1,8 +1,20 @@
 .cp-menu-container {
     color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0.3;
 
     .btn-menu {
         float: right;
         margin: 15px 15px;
+    }
+
+    .menu-box {
+    	width: 50%;
+    	height: 50%;
+    	background-color: white;
+    	
     }
 }
