--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,5 @@
 body {
-	margin: 0 0;
-	.app-container {
-    .log {
-        color: white;
-        padding: 15px 15px;
-        float: left;
-        font-size: 35px;
-    }
-}
+    margin: 0 0;
+
+    .app-container {}
 }
