--- a/src/cps/menu/menu.scss
+++ b/src/cps/menu/menu.scss
@@ -1,20 +1,41 @@
+$purple: rgba(180, 50, 200, 1);
 .cp-menu-container {
-    color: white;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    opacity: 0.3;
 
     .btn-menu {
         float: right;
         margin: 15px 15px;
+
+        &:hover {
+        	cursor: pointer;
+        }
     }
 
     .menu-box {
-    	width: 50%;
-    	height: 50%;
-    	background-color: white;
-    	
+        width: 70%;
+        height: 400px;
+        position: absolute;
+        padding: 30px 5%;
+        opacity: 0.8;
+        top: 100px;
+        left: 10%;
+        background-color: white;
+        box-shadow: 5px 5px 10px 10px rgba(180, 50, 200, 0.5);
+        border-radius: 5px;
+
+        .menu-link {
+            background-color: $purple;
+            width: 40%;
+            height: 180px;
+            display: inline-block;
+            margin: 10px 5%;
+            border-radius: 5px;
+            text-align: center;
+
+            &:hover {
+                cursor: pointer;
+                opacity: 0.5;
+            }
+
+        }
     }
 }
