--- a/src/cps/menu/menu.scss
+++ b/src/cps/menu/menu.scss
@@ -1,12 +1,15 @@
 $purple: rgba(180, 50, 200, 1);
+
 .cp-menu-container {
 
     .btn-menu {
         float: right;
         margin: 15px 15px;
+        width: 35px;
+        height: 35px;
 
         &:hover {
-        	cursor: pointer;
+            cursor: pointer;
         }
     }
 
@@ -30,10 +33,23 @@ $purple: rgba(180, 50, 200, 1);
             margin: 10px 5%;
             border-radius: 5px;
             text-align: center;
+            text-decoration: none;
 
             &:hover {
                 cursor: pointer;
                 opacity: 0.5;
+            }
+
+            &.blog {
+                background-color: yellow;
+            }
+
+            &.reminder {
+                background-color: green;
+            }
+
+            &.python {
+                background-color: red;
             }
 
         }
