--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,16 @@
 body {
     margin: 0 0;
 
-    .app-container {}
+    .app-container {
+        .cp-container {
+            background-color: white;
+            height: calc(90vh - 30px);
+            width: calc(100% - 30px);
+            position: absolute;
+            border-radius: 10px;
+            opacity: 0.8;
+            top: 10vh;
+            left: 15px;
+        }
+    }
 }
