--- a/src/cps/menu/menu.scss
+++ b/src/cps/menu/menu.scss
@@ -1,4 +1,3 @@
-$purple: rgba(180, 50, 200, 1);
 
 .cp-menu-container {
 
@@ -18,22 +17,28 @@ $purple: rgba(180, 50, 200, 1);
         height: 400px;
         position: absolute;
         padding: 30px 5%;
-        opacity: 0.8;
+        // opacity: 0.8;
+        z-index: 999;
         top: 100px;
         left: 10%;
         background-color: white;
-        box-shadow: 5px 5px 10px 10px rgba(180, 50, 200, 0.5);
+        box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
         border-radius: 5px;
 
         .menu-link {
-            background-color: $purple;
+            background-color: $cloud_gray;
             width: 40%;
-            height: 180px;
+            padding: 20px 0;
             display: inline-block;
-            margin: 10px 5%;
+            margin: 20px 5%;
             border-radius: 5px;
             text-align: center;
             text-decoration: none;
+
+            .label {
+                padding: 10px 0;
+                color: $purple;
+            }
 
             &:hover {
                 cursor: pointer;
@@ -41,15 +46,15 @@ $purple: rgba(180, 50, 200, 1);
             }
 
             &.blog {
-                background-color: yellow;
+                //background-color: yellow;
             }
 
             &.reminder {
-                background-color: green;
+                // background-color: green;
             }
 
             &.python {
-                background-color: red;
+                // background-color: red;
             }
 
         }
